--- a/2151Project4/2151Project4.vcxproj
+++ b/2151Project4/2151Project4.vcxproj
@@ -139,7 +139,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="2151Project4.cpp" />
+    <ClCompile Include="2151Project4.java">
+      <FileType>AspPage</FileType>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
