--- a/Lab4_starter/src/makefile
+++ b/Lab4_starter/src/makefile
@@ -1,6 +1,6 @@
 default: 
-	
+	javac src/Driver/DoubleQueueDriver.java src/com/gradescope/DoubleQueue/code/IDoubleQueue.java src/com/gradescope/DoubleQueue/code/ArrayDoubleQueue.java src/com/gradescope/DoubleQueue/code/ListDoubleQueue.java 
 run:
-
+	java *.class
 clean:
 	rm *.class
