--- a/Lab4_starter/src/makefile
+++ b/Lab4_starter/src/makefile
@@ -1,5 +1,8 @@
-default: 
-	javac src/Driver/DoubleQueueDriver.java src/com/gradescope/DoubleQueue/code/IDoubleQueue.java src/com/gradescope/DoubleQueue/code/ArrayDoubleQueue.java src/com/gradescope/DoubleQueue/code/ListDoubleQueue.java 
+default: src/Driver/DoubleQueueDriver.java src/com/gradescope/DoubleQueue/code/IDoubleQueue.java src/com/gradescope/DoubleQueue/code/ArrayDoubleQueue.java src/com/gradescope/DoubleQueue/code/ListDoubleQueue.java 
+	javac src/Driver/DoubleQueueDriver.java 
+	javac src/com/gradescope/DoubleQueue/code/IDoubleQueue.java 
+	javac src/com/gradescope/DoubleQueue/code/ArrayDoubleQueue.java 
+	javac src/com/gradescope/DoubleQueue/code/ListDoubleQueue.java 
 run:
 	java DoubleQueueDriver.class
 clean:
