--- a/Lab4_starter/src/makefile
+++ b/Lab4_starter/src/makefile
@@ -1,8 +1,8 @@
-default: src/Driver/DoubleQueueDriver.java src/com/gradescope/DoubleQueue/code/IDoubleQueue.java src/com/gradescope/DoubleQueue/code/ArrayDoubleQueue.java src/com/gradescope/DoubleQueue/code/ListDoubleQueue.java 
-	javac  src/com/gradescope/DoubleQueue/code/IDoubleQueue.java src/com/gradescope/DoubleQueue/code/ArrayDoubleQueue.java src/com/gradescope/DoubleQueue/code/ListDoubleQueue.java src/Driver/DoubleQueueDriver.java
+default: ./Driver/DoubleQueueDriver.java ./com/gradescope/DoubleQueue/code/IDoubleQueue.java ./com/gradescope/DoubleQueue/code/ArrayDoubleQueue.java ./com/gradescope/DoubleQueue/code/ListDoubleQueue.java 
+	javac ./com/gradescope/DoubleQueue/code/IDoubleQueue.java ./com/gradescope/DoubleQueue/code/ArrayDoubleQueue.java ./com/gradescope/DoubleQueue/code/ListDoubleQueue.java ./Driver/DoubleQueueDriver.java
 
 run:
-	java DoubleQueueDriver.class
+	java Driver.DoubleQueueDriver
 
 clean:
 	rm *.class
