--- a/Lab4_starter/src/makefile
+++ b/Lab4_starter/src/makefile
@@ -1,8 +1,8 @@
 default: ./Driver/DoubleQueueDriver.java ./com/gradescope/DoubleQueue/code/IDoubleQueue.java ./com/gradescope/DoubleQueue/code/ArrayDoubleQueue.java ./com/gradescope/DoubleQueue/code/ListDoubleQueue.java 
 	javac ./com/gradescope/DoubleQueue/code/IDoubleQueue.java ./com/gradescope/DoubleQueue/code/ArrayDoubleQueue.java ./com/gradescope/DoubleQueue/code/ListDoubleQueue.java ./Driver/DoubleQueueDriver.java
 
-run:
+run: ./Driver/DoubleQueueDriver.class ./com/gradescope/DoubleQueue/code/IDoubleQueue.class ./com/gradescope/DoubleQueue/code/ArrayDoubleQueue.class ./com/gradescope/DoubleQueue/code/ListDoubleQueue.class 
 	java Driver.DoubleQueueDriver
 
-clean:
-	rm *.class
+clean: ./Driver/DoubleQueueDriver.class ./com/gradescope/DoubleQueue/code/IDoubleQueue.class ./com/gradescope/DoubleQueue/code/ArrayDoubleQueue.class ./com/gradescope/DoubleQueue/code/ListDoubleQueue.class 
+	rm ./Driver/DoubleQueueDriver.class ./com/gradescope/DoubleQueue/code/*.class
